--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
 <!--
 <form class="container" Action="Form-Processing.php" METHOD="POST" enctype="multipart/form-data">
 -->
-<form name="formulaire" class="container" Action="Form-Processing.php" METHOD="POST" onsubmit="return validerFormulaire(this)">
+<form name="formulaire" enctype="multipart/form-data" Action="Form-Processing.php" METHOD="POST" onsubmit="return validerFormulaire(this)" class="container" >
 
     <div>
         <div class="form-group">
